- A *lot* of source code documentation. - Lots of bug fixes. - Performance improvements.